added code snippet fixed notes ection

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 # You can add your env variable here.
 # RAINDROP_API="your_value"
 
-baseURL="https://ts-next-chakra-motion-kit.vercel.app/"
-siteName="TS NEXT CHAKRA MOTION KIT"
+baseURL="https://aiot-ashy.vercel.app/"
+siteName="AIOT ALL IN ONE TOOL"
 name="AIOT"
